--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.27)
+cmake_minimum_required(VERSION 3.28)
 project(libbase VERSION 0.1.0 LANGUAGES CXX)
 
 ## ============================================================================
@@ -10,10 +10,14 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 ## ============================================================================
 ##  Main library.
 ## ============================================================================
-file(GLOB_RECURSE sources src/*.cc)
-file(GLOB_RECURSE headers include/*.hh)
-add_library(libbase ${sources})
-target_sources(libbase PUBLIC FILE_SET HEADERS FILES ${headers})
+file(GLOB_RECURSE _libbase_headers include/*.hh)
+file(GLOB_RECURSE _libbase_modules lib/*.ccm)
+file(GLOB_RECURSE _libbase_sources src/*.cc)
+add_library(libbase STATIC ${_libbase_sources})
+target_sources(libbase PUBLIC
+    FILE_SET HEADERS FILES ${_libbase_headers}
+    FILE_SET CXX_MODULES FILES ${_libbase_modules}
+)
 set_target_properties(libbase PROPERTIES PREFIX "")
 target_include_directories(libbase PUBLIC include)
 
