[Compiler] Fix some GCC warnings

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,9 +40,6 @@ endif ()
 ## Flags for Clang and GCC.
 if (CMAKE_CXX_COMPILER_ID STREQUAL "GNU" OR CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
     target_compile_options(libbase PRIVATE
-        -fms-extensions
-        -fdeclspec
-
         ## Warnings.
         -Wall -Wextra     # Enable ‘all’ warnings.
         -Wundef           # Invalid #undef or undefined macro in #if.
@@ -96,6 +93,8 @@ endif ()
 ## Additional flags for Clang.
 if (CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
     target_compile_options(libbase PRIVATE
+        -fms-extensions
+        -fdeclspec
         -Werror=dangling
         -Werror=return-stack-address
     )
@@ -206,7 +205,11 @@ if (DEFINED BUILD_TESTS)
     file(GLOB_RECURSE test_sources test/*.cc)
     add_executable(tests ${test_sources})
     target_link_libraries(tests PRIVATE libbase Catch2::Catch2WithMain)
-    target_compile_options(tests PRIVATE -fms-extensions -fdeclspec)
+
+    if (CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
+        target_compile_options(tests PRIVATE -fms-extensions -fdeclspec)
+    endif()
+
     target_compile_definitions(tests PRIVATE
         "LIBBASE_TESTING_BINARY_DIR=\"${CMAKE_CURRENT_BINARY_DIR}\""
         "LIBBASE_IS_BUILDING_TESTS"
