--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -259,4 +259,17 @@ if (LIBBASE_BUILD_TESTS)
     )
 
     catch_discover_tests(tests)
+
+    if (CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
+        add_test(
+            NAME static-assert-errors
+            COMMAND "${CMAKE_CXX_COMPILER}"
+                -Xclang -verify
+                -std=c++26
+                -fsyntax-only
+                -ferror-limit=0
+                "${PROJECT_SOURCE_DIR}/verify-tests/Clopts.cc"
+                -isystem "${PROJECT_SOURCE_DIR}/include"
+        )
+    endif()
 endif()
